update week2 readme